--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,6 +9,6 @@
   <body>
     Hi <span id='name'></span>
     <div id='counter'></div>
-    <script src="{% static 'js/index.js' %}" charset="utf-8"></script>
+    <script src="{% static 'main.js' %}" charset="utf-8"></script>
   </body>
 </html>
